fix image positioning and projects spacing

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ nav {
   padding: 120px 24px;
   background-color: #1c1a19;
   color: #fff;
+  position: relative;
 }
 
 #header h1 {
@@ -89,16 +90,16 @@ nav {
 #illustration {
   position: absolute;
   left: 65%;
-  top: 60%;
+  top: 53%;
 }
 
 #myworks {
   display: grid;
   grid-template-columns: 24px auto 24px;
-  grid-template-rows: 100px repeat(5, 1fr);
+  grid-template-rows: 100px repeat(5, auto);
   row-gap: 20px;
   width: 375px;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 #myworks #title {
@@ -106,13 +107,14 @@ nav {
   grid-row: 1/2;
   width: 327px;
   height: 83px;
-  font-family: "Crete Round", serif;
-  font-size: 18px;
+  font-family: "Inter", serif;
+  font-weight: 400;
+  font-size: 36px;
   text-align: center;
 }
 
-#title h1 {
-  margin-bottom: 24px;
+#title hr {
+  margin-top: 20px;
 }
 
 #project1 {
@@ -123,6 +125,7 @@ nav {
 
 #project1 h3 {
   font-family: "Crete Round", serif;
+  color: #091e42;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -172,7 +175,8 @@ nav {
 #project2 {
   grid-column: 2/3;
   background-image: url("./images/Img\ Placeholder2.png");
-  background-size: no-repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 327px;
   height: 386px;
   color: #fff;
@@ -233,6 +237,7 @@ nav {
   flex-direction: column;
   background-color: #1c1a19;
   color: #f4f5f7;
+  position: relative;
 }
 
 #about-me #title {
@@ -263,12 +268,14 @@ nav {
   background-color: #ff6b00;
   color: #f4f5f7;
   border: none;
-  margin-left: 30px;
+  margin: 0 0 180px 30px;
 }
 
-/* #about-me img {
+#about-me #illustrationSec {
   position: absolute;
-} */
+  left: 57.11%;
+  top: 23.79%;
+}
 
 #about-me hr {
   width: 327px;
@@ -276,21 +283,33 @@ nav {
   margin: 50px 0 50px 24px;
 }
 
-#details {
-  width: 327px;
+#about-my-self {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
+  align-items: center;
   font-family: "Inter", serif;
   margin-bottom: 100px;
 }
 
-#details .tools {
+#about-my-self .tools {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  text-align: center;
   padding: 20px;
+}
+
+.tools header {
   font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.tools ul li {
+  margin-bottom: 15px;
 }
 
 #contact-me {
